# pandance

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pandance-dev.yaml  pandance.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package-min-ver.yml  python-package.yml
doc/: conf.py  getting_started.rst  index.rst  operations.rst  requirements.txt
doc/_static/css/: custom.css
doc/source/: conf.py  index.rst
doc/source/_static/css/: custom.css
doc/source/operations/: fuzzy_join.rst  index.rst  ineq_join.rst  theta_join.rst
doc/source/relnotes/: index.rst  v0.1.0.rst  v0.2.0.rst  v0.2.1.rst  v0.3.0.rst
doc/source/usage/: getting_started.rst
pandance/: __init__.py  pandance.py
test/: fuzzy_perf.R  ineq_perf.R  performance.py  test_ops.py
