[build-system]
requires = [
    "setuptools>=42",
    "pandas>=1.2.0",
    "intervaltree==3.1.0",
    "psutil>=5.9.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pandance"]

[project]
name = "pandance"
version = "0.1.0"
authors = [
  { name="Filip Buric" }
]
maintainers = [
  { name="Filip Buric" }
]
description = "Advanced relational operations for pandas DataFrames"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Scientific/Engineering ",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://pandance.readthedocs.io"
"Documentation" = "https://pandance.readthedocs.io"
"Source Code" = "https://github.com/fburic/pandance"
